reveres image search services

--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -41,7 +41,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <item name="menu_open_external" type="id"/>
     <item name="menu_share" type="id"/>
     <item name="menu_share_link" type="id"/>
-    <item name="menu_search_google" type="id"/>
+    <item name="menu_reverse_search" type="id"/>
     <item name="menu_quickaccess_add" type="id"/>
     
     <item name="context_menu_move" type="id"/>
@@ -77,6 +77,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <item name="context_menu_thumb_download" type="id"/>
     <item name="context_menu_thumb_copy_url" type="id"/>
     <item name="context_menu_thumb_attachment_info" type="id"/>
-    <item name="context_menu_thumb_search_google" type="id"/>
+    <item name="context_menu_thumb_reverse_search" type="id"/>
     
 </resources>
