--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -215,6 +215,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             android:summary="@string/pref_hide_completely_summary" />  -->
         
         <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/pref_key_swipe_to_hide_thread"
+            android:title="@string/pref_swipe_to_hide_title"
+            android:summary="@string/pref_swipe_to_hide_summary" />
+        
+        <CheckBoxPreference
             android:defaultValue="true"
             android:key="@string/pref_key_external_links_confirmation"
             android:title="@string/pref_external_links_confirmation_title"
