--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -150,4 +150,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>@string/pref_sidepanel_width_value_45percent</item>
         <item>@string/pref_sidepanel_width_value_50percent</item>
     </string-array>
+    <string name="pref_key_settings_ie">PREF_KEY_SETTINGS_IE</string>
+    <string name="pref_key_settings_export">PREF_KEY_SETTINGS_EXPORT</string>
+    <string name="pref_key_settings_import_overwrite">PREF_KEY_SETTINGS_IMPORT_OVERWRITE</string>
+    <string name="pref_key_settings_import">PREF_KEY_SETTINGS_IMPORT</string>
 </resources>
