--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -154,4 +154,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_settings_export">PREF_KEY_SETTINGS_EXPORT</string>
     <string name="pref_key_settings_import_overwrite">PREF_KEY_SETTINGS_IMPORT_OVERWRITE</string>
     <string name="pref_key_settings_import">PREF_KEY_SETTINGS_IMPORT</string>
+    <string name="pref_key_post_thumbnail_size">PREF_KEY_POST_THUMBNAIL_SIZE</string>
 </resources>
